# W32HttpServer

./: .gitignore  COPYING  README.md  W32Http.dsw  W32Http.sln
W32HttpServer/: CMakeLists.txt  W32HttpServer.dsp  W32HttpServer.rc  W32HttpServer.vcproj  common.h  logging.c  logging.h  main_window.c  main_window_handlers.c  main_window_handlers.h  mingw.toolchain.cmake  resource.h  server.h  server_http.c  server_http.h  server_win32.c  w32httpd.rc  w32httpd.tgt  w32httpd.wpj
